# refinet

./: .gitignore  README.md  TODO.md  pyproject.toml
src/refinet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/refinet/algebra/: system.py
src/refinet/cascade/: decomposition.py  exact.py  surrogate.py  surrogate2d.py
src/refinet/geometry/: base.py  cpwl.py  finite_state.py  homogeneous.py  library.py  nonstationary.py  refinable.py  stationary.py
src/refinet/network/: model.py  model2d.py  tensor.py  tensor2d.py
tests/: bridge_l2.py  decomposition.py  dragon_evol  dragon_l2.py  gosper_l2.py  hilbert_hom_l2.py  hilbert_l2.py  hilbert_like_l2.py  homog_l2.py  koch_l2.py  morton_l2.py  morton_like_l2.py  peano_hom_l2.py  peano_l2.py  plot_chi.py  plot_cobweb.py  plot_lib_curve.py  plot_loop.py  plot_orbit.py  plot_readout.py  plot_router.py  plot_square.py  plot_surrogate_dragon.py  refinable_l2.py  sierpinski_ahead_l2.py  sierpinski_l2.py  tagaki_l2.py  test_2d_model.py  test_2d_sur.py  test_2d_tensor.py  test_2dmatrices.py  test_cascade.py  test_gem.py  test_integration.py  test_l2_algebra.py  test_l3_exact_cascade.py  test_l4_surrogates.py  test_l5_network.py  test_loop.py  test_model.py  (+7 more)
